--- a/dashboard/frontend/package.json
+++ b/dashboard/frontend/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "brent-oil-dashboard",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
@@ -14,5 +15,16 @@
     "start": "react-scripts start",
     "build": "react-scripts build"
   },
-  "proxy": "http://localhost:5000"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
